--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,8 +5,10 @@
         "jest": true
     },
     "extends": [
-        "eslint:recommended",
-        "plugin:@typescript-eslint/recommended"
+        "airbnb-base",
+        "plugin:@typescript-eslint/recommended",
+        "prettier",
+        "plugin:prettier/recommended"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
@@ -16,23 +18,12 @@
     "plugins": [
         "@typescript-eslint",
         "eslint-plugin-import",
-        "eslint-plugin-import-helpers"
+        "eslint-plugin-import-helpers",
+        "prettier"
     ],
     "rules": {
-        "linebreak-style": [
-            "error",
-            "unix"
-        ],
-        "quotes": [
-            "error",
-            "single"
-        ],
-        "semi": [
-            "error",
-            "always"
-        ],
         "camelcase": "off",
-        "import/no-unresolved": "error",
+        "prettier/prettier": "error",
         "@typescript-eslint/naming-convention": [
             "error",
             {
@@ -47,12 +38,13 @@
             }
         ],
         "class-methods-use-this": "off",
-        "import/prefer-default-export": "off",
         "no-shadow": "off",
         "no-console": "off",
         "no-useless-constructor": "off",
         "no-empty-function": "off",
         "lines-between-class-members": "off",
+        "import/no-unresolved": "error",
+        "import/prefer-default-export": "off",
         "import/extensions": [
             "error",
             "ignorePackages",
