--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules --respawn --poll src/shared/infra/http/server.ts",
         "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli",
-        "test": "jest",
+        "test": "cross-env NODE_ENV=test jest",
         "seed:admin": "ts-node-dev -r tsconfig-paths/register src/shared/infra/typeorm/seed/admin.ts"
     },
     "dependencies": {
@@ -30,10 +30,12 @@
         "@types/jest": "^26.0.23",
         "@types/jsonwebtoken": "^8.5.1",
         "@types/multer": "^1.4.5",
+        "@types/supertest": "^2.0.11",
         "@types/swagger-ui-express": "^4.1.2",
         "@types/uuid": "^8.3.0",
         "@typescript-eslint/eslint-plugin": "^4.23.0",
         "@typescript-eslint/parser": "^4.23.0",
+        "cross-env": "^7.0.3",
         "eslint": "^7.26.0",
         "eslint-config-airbnb-base": "^14.2.1",
         "eslint-config-prettier": "^8.1.0",
@@ -43,6 +45,7 @@
         "eslint-plugin-prettier": "^3.3.1",
         "jest": "^27.0.1",
         "prettier": "^2.2.1",
+        "supertest": "^6.1.3",
         "ts-jest": "^27.0.1",
         "ts-node-dev": "^1.1.6",
         "tsconfig-paths": "^3.9.0",
