--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -75,6 +75,7 @@
             "error",
             {
                 "devDependencies": [
+                    "jest.config.ts",
                     "**/*.spec.ts",
                     "**/*.spec.js"
                 ]
